--- a/assets/less/dashboard.less
+++ b/assets/less/dashboard.less
@@ -31,8 +31,14 @@
         position: absolute;
         top: 0;
         left: 0;
+        .cabecera{
+            background: #999;
+            color: #fff;
+            padding: 5px;
+            cursor: move;
+        }
         .contenido{
-            margin: 10px;
+            padding: 5px;
         }
     }
     .front{
