--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1,14 +1,27 @@
-.ajaxForm{
-    position: relative;
+header {
+  height: 120px;
+  position: relative;
 }
-
-.ajaxForm .ajaxLoader{
-    width: 80px;
-    height: 20px;
-    background: #fff url("../img/ajax-loader.gif") 25px 20px no-repeat;
-    border: 2px solid #999;
-    border-radius: 5px;
-    position: absolute;
-    text-align: center;
-    padding-top: 60px;
+header h1 {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+header .nav {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+.ajaxForm {
+  position: relative;
+}
+.ajaxForm .ajaxLoader {
+  width: 80px;
+  height: 20px;
+  background: #ffffff url("../img/ajax-loader.gif") 25px 20px no-repeat;
+  border: 2px solid #999;
+  border-radius: 5px;
+  position: absolute;
+  text-align: center;
+  padding-top: 60px;
 }
