--- a/assets/less/dashboard.less
+++ b/assets/less/dashboard.less
@@ -28,11 +28,12 @@
         .box-shadow(0 1px 4px rgba(0, 0, 0, 0.1));
         border: 1px solid #ccc;
         width: 100%;
+        height: 460px;
         position: absolute;
         top: 0;
         left: 0;
         .cabecera{
-            background: #999;
+            background: #75aadb;
             color: #fff;
             padding: 5px;
             cursor: move;
@@ -52,7 +53,7 @@
         }
     }
     .back{
-        background: #ccc;
+        background: #75aadb;
         .rotateY(-180deg);
         z-index: 800;
         .volver{
