--- a/assets/less/dashboard.less
+++ b/assets/less/dashboard.less
@@ -53,7 +53,7 @@
         }
     }
     .back{
-        background: #75aadb;
+        background: #eee;
         .rotateY(-180deg);
         z-index: 800;
         .volver{
