--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -1,3 +1,5 @@
+@import "bootstrap/mixins.less";
+
 header{
     height: 120px;
     position: relative;
@@ -17,12 +19,12 @@ header{
     position: relative;
     .ajaxLoader{
         width: 80px;
-        height: 20px;
-        background: #fff url("../img/ajax-loader.gif") 25px 20px no-repeat;
-        border: 2px solid #999;
-        border-radius: 5px;
+        height: 24px;
+        background: #000 url("../img/ajax-loader.gif") 25px 16px no-repeat;
+        color: #fff;
+        .border-radius(5px);
         position: absolute;
         text-align: center;
-        padding-top: 60px;
+        padding-top: 56px;
     }
 }
