Se implementa seguimiento de tramites

--- a/assets/css/modelador-procesos.css
+++ b/assets/css/modelador-procesos.css
@@ -28,7 +28,12 @@
     cursor: move;
     z-index: 1000;
 }
-
+#areaDibujo .box.actual{
+    background: goldenrod;
+}
+#areaDibujo .box.completado{
+    background: green;
+}
 #areaDibujo .box.selected{
     background: #666;
 }
