--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -34,9 +34,14 @@ header h1 {
   top: 10px;
   left: 10px;
 }
-header .nav {
+header #userMenu {
   position: absolute;
   top: 10px;
+  right: 10px;
+}
+header #menu {
+  position: absolute;
+  bottom: 10px;
   right: 10px;
 }
 .ajaxForm {
