--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -8,9 +8,14 @@ header{
         top: 10px;
         left: 10px;
     }
-    .nav{
+    #userMenu{
         position: absolute;
         top: 10px;
+        right: 10px;
+    }
+    #menu{
+        position: absolute;
+        bottom: 10px;
         right: 10px;
     }
 }
