--- a/assets/less/bootstrap/modals.less
+++ b/assets/less/bootstrap/modals.less
@@ -1,5 +1,7 @@
-// MODALS
-// ------
+//
+// Modals
+// --------------------------------------------------
+
 
 // Recalculate z-index where appropriate
 .modal-open {
@@ -34,8 +36,8 @@
   left: 50%;
   z-index: @zindexModal;
   overflow: auto;
-  width: 760px;
-  margin: -250px 0 0 -380px;
+  width: 560px;
+  margin: -250px 0 0 -280px;
   background-color: @white;
   border: 1px solid #999;
   border: 1px solid rgba(0,0,0,.3);
@@ -54,6 +56,11 @@
   border-bottom: 1px solid #eee;
   // Close icon
   .close { margin-top: 2px; }
+  // Heading
+  h3 {
+    margin: 0;
+    line-height: 30px;
+  }
 }
 
 // Body (where all modal content resides)
