--- a/assets/less/dashboard.less
+++ b/assets/less/dashboard.less
@@ -37,6 +37,10 @@
             color: #fff;
             padding: 5px;
             cursor: move;
+            h3{
+                font-size: 14px;
+                line-height: 1;
+            }
         }
         .contenido{
             padding: 5px;
