--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -25,8 +25,18 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+#dashboard {
+  margin-left: -10px;
+  margin-right: -10px;
+}
 #dashboard .widget {
   position: relative;
+  width: 32%;
+  height: 460px;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 20px;
   perspective: 1000px;
   -webkit-perspective: 1000px;
   -moz-perspective: 1000px;
