--- a/assets/less/dashboard.less
+++ b/assets/less/dashboard.less
@@ -20,62 +20,72 @@
     -ms-perspective: @distance;
 }
 
-#dashboard .widget {
-    position: relative;
-    .perspective(1000px);
-    .front,.back{
-        .transition(1s);
-        .box-shadow(0 1px 4px rgba(0, 0, 0, 0.1));
-        border: 1px solid #ccc;
-        width: 100%;
+#dashboard {
+    margin-left: -10px;
+    margin-right: -10px;
+    .widget {
+        position: relative;
+        width: 32%;
         height: 460px;
-        position: absolute;
-        top: 0;
-        left: 0;
-        .cabecera{
-            background: #75aadb;
-            color: #fff;
-            padding: 5px;
-            cursor: move;
-            h3{
-                font-size: 14px;
-                line-height: 1;
+        float: left;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-bottom: 20px;
+        .perspective(1000px);
+        .front,.back{
+            .transition(1s);
+            .box-shadow(0 1px 4px rgba(0, 0, 0, 0.1));
+            border: 1px solid #ccc;
+            width: 100%;
+            height: 460px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            .cabecera{
+                background: #75aadb;
+                color: #fff;
+                padding: 5px;
+                cursor: move;
+                h3{
+                    font-size: 14px;
+                    line-height: 1;
+                }
+            }
+            .contenido{
+                padding: 5px;
             }
         }
-        .contenido{
-            padding: 5px;
+        .front{
+            background: #fff;
+            .rotateY(0deg);
+            z-index: 900;
+            .config{
+                position: absolute;
+                top: 10px;
+                right: 10px;
+            }
         }
-    }
-    .front{
-        background: #fff;
-        .rotateY(0deg);
-        z-index: 900;
-        .config{
-            position: absolute;
-            top: 10px;
-            right: 10px;
+        .back{
+            background: #eee;
+            .rotateY(-180deg);
+            z-index: 800;
+            .volver{
+                position: absolute;
+                top: 10px;
+                right: 10px;
+            }
         }
-    }
-    .back{
-        background: #eee;
-        .rotateY(-180deg);
-        z-index: 800;
-        .volver{
-            position: absolute;
-            top: 10px;
-            right: 10px;
-        }
-    }
-    
-}
 
-#dashboard .widget.flip {
-    .front {
-        .rotateY(180deg);
-        z-index: 900;
     }
-    .back {
-        .rotateY(0deg);
-        z-index: 1000;
+
+    .widget.flip {
+        .front {
+            .rotateY(180deg);
+            z-index: 900;
+        }
+        .back {
+            .rotateY(0deg);
+            z-index: 1000;
+        }
     }
 }
