--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -26,23 +26,16 @@
   box-sizing: border-box;
 }
 header {
-  height: 120px;
-  position: relative;
+  margin-bottom: 20px;
 }
 header h1 {
-  position: absolute;
-  top: 10px;
-  left: 10px;
+  float: left;
 }
 header #userMenu {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+  float: right;
 }
 header #menu {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
+  float: right;
 }
 .ajaxForm {
   position: relative;
