--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -1,22 +1,15 @@
 @import "bootstrap/mixins.less";
 
 header{
-    height: 120px;
-    position: relative;
+    margin-bottom: 20px;
     h1{
-        position: absolute;
-        top: 10px;
-        left: 10px;
+        float: left;
     }
     #userMenu{
-        position: absolute;
-        top: 10px;
-        right: 10px;
+        float: right;
     }
     #menu{
-        position: absolute;
-        bottom: 10px;
-        right: 10px;
+        float: right;
     }
 }
 
