--- a/assets/css/diagrama-procesos.css
+++ b/assets/css/diagrama-procesos.css
@@ -14,9 +14,9 @@
 }
 
 #areaDibujo .botonera{
-    position: absolute;
-    top: 10px;
-    right: 10px;
+    position: fixed;
+    top: 220px;
+    right: 20px;
 }
 
 #areaDibujo .box{
