--- a/assets/css/diagrama-procesos.css
+++ b/assets/css/diagrama-procesos.css
@@ -1,8 +1,16 @@
 #areaDibujo{
     width: 100%;
-    height: 800px;
     background: url(../img/bg_pm.gif);
     position: relative;
+    height: 800px;
+}
+
+#areaDibujo #draw{
+    height: 800px;
+    width: 100%;
+    position: absolute;
+    top: 100px;
+    left: 0;
 }
 
 #areaDibujo h1{
