--- a/assets/css/diagrama-procesos.css
+++ b/assets/css/diagrama-procesos.css
@@ -1,16 +1,15 @@
 #areaDibujo{
     width: 100%;
-    background: url(../img/bg_pm.gif);
+    
     position: relative;
-    height: 800px;
+    height: 100px;
 }
 
-#areaDibujo #draw{
+#draw{
+    background: url(../img/bg_pm.gif);
     height: 800px;
     width: 100%;
-    position: absolute;
-    top: 100px;
-    left: 0;
+
 }
 
 #areaDibujo h1{
