--- a/assets/css/diagrama-procesos.css
+++ b/assets/css/diagrama-procesos.css
@@ -2,7 +2,7 @@
     width: 100%;
     
     position: relative;
-    height: 100px;
+    height: 60px;
 }
 
 #draw{
@@ -24,6 +24,7 @@
     position: fixed;
     top: 220px;
     right: 20px;
+    z-index: 1000;
 }
 
 #areaDibujo .box{
