--- a/assets/less/bootstrap/theme.less
+++ b/assets/less/bootstrap/theme.less
@@ -1,29 +1,8 @@
 @baseFontSize:          13px;
 @baseLineHeight:        18px;
+@linkColor:             #005181;
 
 .modal{
     width: 760px;
-    margin: -250px 0 0 -380px;
-}
-
-.dropdown-menu {
-    // Links within the dropdown menu
-  a {
-    display: inline;
-    padding: 0px 0px;
-    clear: none;
-    font-weight: normal;
-    line-height: @baseLineHeight;
-    color: @linkColor;
-    white-space: normal;
-  }
-  > li > a{
-    display: block;
-    padding: 3px 20px;
-    clear: both;
-    font-weight: normal;
-    line-height: @baseLineHeight;
-    color: @dropdownLinkColor;
-    white-space: nowrap;
-  }
+    margin-left: -380px;
 }
