--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -74,3 +74,20 @@ footer{
         padding-top: 56px;
     }
 }
+
+.dynaForm{
+    legend{
+        border: none;
+        margin: 0;
+        color: #005181;
+        font-weight: bold;
+    }
+    label{
+        color: #999;
+    }
+    .form-actions{
+        text-align: right;
+        background: none;
+        border: none;
+    }
+}
