--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -35,9 +35,11 @@ header .container-fluid {
 header h1 {
   color: #666;
   font-size: 18px;
+  line-height: 1.2;
 }
 header h1#logo {
   border-right: 1px solid #ddd;
+  padding-right: 20px;
 }
 header #userMenu {
   background: #ddd;
