--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -9,8 +9,10 @@ header{
     h1{
         color: #666;
         font-size: 18px;
+        line-height: 1.2;
         &#logo{
             border-right: 1px solid #ddd;
+            padding-right: 20px;
         }
     }
     #userMenu{
