--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -13,6 +13,7 @@ header{
         &#logo{
             border-right: 1px solid #ddd;
             padding-right: 20px;
+            margin: 0 0 20px 0;
         }
     }
     #userMenu{
