--- a/assets/less/frontend.less
+++ b/assets/less/frontend.less
@@ -57,6 +57,9 @@ h2{
     td.name{
         font-size: 14px;
         color: #333;
+        a {
+            color: inherit;
+        }
     } 
     td.actions{
         width: 1px;
