--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -46,13 +46,16 @@ footer{
     address{
         margin: 0;
     }
+    .col{
+        padding: 10px;
+    }
     .area1{
         background: #222;
-        padding: 20px 0 10px 0;
+        padding: 0;
     }
     .area2{
         background: #000;
-        padding: 10px 0;
+        padding: 0;
         .container,.container-fluid{
             position: relative;
             .footerGob{
