--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -67,7 +67,8 @@ footer ul {
 footer h3 {
   font-size: 16px;
   font-weight: normal;
-  margin: 0;
+  margin: 0 0 10px 0;
+  line-height: 1.2;
 }
 footer address {
   margin: 0;
@@ -78,6 +79,7 @@ footer .col {
 footer .area1 {
   background: #222;
   padding: 0;
+  padding-top: 10px;
 }
 footer .area2 {
   background: #000;
