--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -41,7 +41,8 @@ footer{
     h3{
         font-size: 16px;
         font-weight: normal;
-        margin: 0;
+        margin: 0 0 10px 0;
+        line-height: 1.2;
     }
     address{
         margin: 0;
@@ -52,6 +53,7 @@ footer{
     .area1{
         background: #222;
         padding: 0;
+        padding-top: 10px;
     }
     .area2{
         background: #000;
