--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -27,22 +27,22 @@ header{
 }
 
 footer{ 
-    color: #6699cc;
     margin-bottom: 40px;
     a{
-        color: #6699cc;
+        color: #59758D;
         &:hover{
             color: #fff;
         }
     }
     ul{
-        color: red;
+        color: white;
     }
     h3{
         font-size: 16px;
         font-weight: normal;
         margin: 0 0 10px 0;
         line-height: 1.2;
+        color: #ddd;
     }
     address{
         margin: 0;
@@ -50,19 +50,22 @@ footer{
     .col{
         padding: 10px;
     }
+    .ministerio{
+        color: #ddd;
+    }
     .area1{
-        background: #222;
+        background: #232A30;
         padding: 0;
-        padding-top: 10px;
+        padding: 10px 0;
     }
     .area2{
         background: #000;
-        padding: 0;
+        padding: 10px 0;
         .container,.container-fluid{
             position: relative;
             .footerGob{
                 position:absolute;
-                bottom: -10px;
+                bottom: -20px;
                 right: 0;
             }
         }
