--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -66,7 +66,7 @@ footer{
             .footerGob{
                 position:absolute;
                 bottom: -20px;
-                right: 0;
+                right: 10px;
             }
         }
     }
