--- a/assets/less/dashboard.less
+++ b/assets/less/dashboard.less
@@ -42,6 +42,7 @@
             position: absolute;
             top: 0;
             left: 0;
+            overflow-y: auto;
             .cabecera{
                 background: #75aadb;
                 color: #fff;
@@ -54,8 +55,9 @@
             }
             .contenido{
                 padding: 5px;
+                
+                }
             }
-        }
         .front{
             background: #fff;
             .rotateY(0deg);
