--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -58,6 +58,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  overflow-y: auto;
 }
 #dashboard .widget .front .cabecera,
 #dashboard .widget .back .cabecera {
