--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -94,6 +94,9 @@ footer{
         font-weight: bold;
     }
     label{
+        color: #666;
+    }
+    .help-block{
         color: #999;
     }
     .form-actions{
