Mejoras graficas a ventana de login

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -65,3 +65,20 @@ h2 {
   font-size: 12px;
   color: #0B5DA5;
 }
+#loginView .simple .wrapper {
+  padding: 20px 20px 0 20px;
+}
+#loginView .claveunica {
+  background: #E1ECF6;
+  height: 70px;
+}
+#loginView .claveunica .wrapper {
+  padding: 20px;
+}
+#loginView .claveunica .wrapper p {
+  float: left;
+  line-height: 30px;
+}
+#loginView .claveunica .wrapper a {
+  float: right;
+}
