--- a/assets/less/frontend.less
+++ b/assets/less/frontend.less
@@ -70,3 +70,25 @@ h2{
         color: #0B5DA5;
     }
 }
+
+#loginView{
+    .simple{
+        .wrapper{
+            padding: 20px 20px 0 20px;
+        }
+    }
+    .claveunica{
+        background: #E1ECF6;
+        height: 70px;
+        .wrapper{
+            padding: 20px;
+            p{
+                float: left;
+                line-height: 30px;
+            }
+            a{
+                float: right;
+            }
+        }
+    }
+}
