--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -17,8 +17,11 @@ header{
         }
     }
     #userMenu{
+        > li > a{
          background: #ddd;
          .border-radius(5px);
+         color: #333;
+        }
     }
 }
 
