--- a/assets/less/bootstrap/theme.less
+++ b/assets/less/bootstrap/theme.less
@@ -1,6 +1,8 @@
 @baseFontSize:          13px;
 @baseLineHeight:        18px;
 @linkColor:             #005181;
+@btnSuccessBackground:              #A1CA4F;
+@btnSuccessBackgroundHighlight:     #5D8214;
 
 .modal{
     width: 760px;
