--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -46,6 +46,9 @@ h2 {
   font-size: 21px;
   color: #005181;
 }
+#mainTable th a{
+    color:inherit;
+}
 #mainTable td {
   font-size: 12px;
   color: #999;
