Correcciones de performance y despliegue en modelador

--- a/assets/css/diagrama-procesos.css
+++ b/assets/css/diagrama-procesos.css
@@ -5,10 +5,14 @@
     height: 60px;
 }
 
+#drawWrapper{
+    width: 100%;
+    height: 810px;
+    overflow: auto;
+}
+
 #draw{
     background: url(../img/bg_pm.gif);
-    height: 800px;
-    width: 100%;
     position: relative;
 }
 
