--- a/assets/css/common.less
+++ b/assets/css/common.less
@@ -29,7 +29,8 @@ header{
     min-height: 480px;
 }
 
-footer{ 
+footer{
+    margin-top: 100px;
     margin-bottom: 40px;
     a{
         color: #59758D;
