--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -46,25 +46,25 @@ h2 {
   font-size: 21px;
   color: #005181;
 }
-#mainTable th a{
-    color:inherit;
+#mainTable tr:hover {
+  background: #f0f7fb;
 }
-#mainTable td {
+#mainTable tr td {
   font-size: 12px;
   color: #999;
 }
-#mainTable td.name {
+#mainTable tr td.name {
   font-size: 14px;
   color: #333;
 }
-#mainTable td.name a {
+#mainTable tr td.name a {
   color: inherit;
 }
-#mainTable td.actions {
+#mainTable tr td.actions {
   width: 1px;
   white-space: nowrap;
 }
-#mainTable td.time {
+#mainTable tr td.time {
   font-size: 12px;
   color: #0B5DA5;
 }
