--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -50,25 +50,31 @@ h2{
 }
 
 #mainTable{
+  tr{
+    &:hover{
+      background: #f0f7fb;
+    }
     td{
-        font-size: 12px;
-        color: #999;
-    }   
+      font-size: 12px;
+      color: #999;
+    }
     td.name{
-        font-size: 14px;
-        color: #333;
-        a {
-            color: inherit;
-        }
-    } 
+      font-size: 14px;
+      color: #333;
+      a {
+        color: inherit;
+      }
+    }
     td.actions{
-        width: 1px;
-        white-space: nowrap;
+      width: 1px;
+      white-space: nowrap;
     }
     td.time{
-        font-size: 12px;
-        color: #0B5DA5;
+      font-size: 12px;
+      color: #0B5DA5;
     }
+  }
+
 }
 
 #loginView{
