--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -85,3 +85,31 @@ h2 {
 #loginView .claveunica .wrapper a {
   float: right;
 }
+.olvido{
+  font-size: 11px;
+}
+
+  .saltar, .saltar li {
+    margin:0;
+    padding:0;
+  }
+.saltar a {
+    position:absolute;
+    left:-10000px;
+    top:auto;
+    width:1px;
+    height:1px;
+    overflow:hidden;
+    z-index: 9999;
+    list-style-type:none;  
+} 
+
+.saltar a:focus {
+    position:absolute;
+    top:0;
+    left:40%;
+    background:#fff;
+    width:auto;
+    height:auto;
+    padding:10px;
+ } 
