Se agrega el archivo less.

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -98,3 +98,37 @@ h2{
         }
     }
 }
+
+
+
+.olvido{
+  font-size: 11px;
+}
+
+.saltar {
+    .saltar li{
+     margin:0;
+    padding:0;
+    }
+}
+
+.saltar a {
+    position:absolute;
+    left:-10000px;
+    top:auto;
+    width:1px;
+    height:1px;
+    overflow:hidden;
+    z-index: 9999;
+    list-style-type:none;  
+} 
+
+.saltar a:focus {
+    position:absolute;
+    top:0;
+    left:40%;
+    background:#fff;
+    width:auto;
+    height:auto;
+    padding:10px;
+ } 
