--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -106,9 +106,10 @@ h2{
 }
 
 .saltar {
-    .saltar li{
-     margin:0;
+    li{
+    margin:0;
     padding:0;
+    list-style-type: none;
     }
 }
 
