Agregado loading image

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -131,3 +131,11 @@ footer .area2 .container-fluid .footerGob {
   background: none;
   border: none;
 }
+
+.smallLoading{
+  background: #FFFFFF url("../img/ajax-loader.gif") no-repeat;
+  background-position: center;
+  background-size: contain;
+  display: inline;
+  width: 31px;
+}
