--- a/assets/css/common.less
+++ b/assets/css/common.less
@@ -108,3 +108,11 @@ footer{
         border: none;
     }
 }
+
+.smallLoading{
+    background: #FFFFFF url("../img/ajax-loader.gif") no-repeat;
+    background-position: center;
+    background-size: contain;
+    display: inline;
+    width: 31px;
+}
