--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -87,7 +87,7 @@ footer .area1 {
   padding: 10px 0;
 }
 footer .area2 {
-  background: #fff;
+  background: #000;
   padding: 10px 0;
 }
 footer .area2 .container,
