--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -77,8 +77,10 @@ h2 {
 }
 #loginView .claveunica .wrapper {
   padding: 20px;
+  /*
   padding-left: 70px;
   padding-right: 88px;
+  */
 }
 #loginView .claveunica .wrapper p {
   float: left;
