--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -67,6 +67,13 @@ header #userMenu > li > a {
 .selectdias{
   width:350px;
 }
+.trselect .select2{
+  width: 290px !important;
+}
+.trselect .select2 .selection .select2-selection{
+  height: 55px !important;
+  padding-left: 5px;
+}
 .ajaxForm2 .select2-container--default .select2-selection--multiple .select2-selection__rendered {
   list-style: none;
   margin: 0;
@@ -87,6 +94,13 @@ header #userMenu > li > a {
 }
 .ajaxForm2 .select2-container--default .select2-selection--multiple .select2-selection__choice{
   margin-top: 3px;
+}
+.js_rows_franajas .select2-container{
+  width: 300px !important;
+}
+.js_rows_franajas .select2-container .selection .select2-selection{
+  height: 50px;
+  padding-left: 5px;
 }
 .collab{
   min-width: 63px;
@@ -402,13 +416,19 @@ footer .area2 .container-fluid .footerGob {
   width: 98% !important;
 }
 .cal-front-fun .cal-month-box .cal-row-fluid .cal-cell1 .cal-month-day{
-  height: 66px;
+  height: 42px;
+}
+.cal-front-fun .cal-month-box .cal-row-fluid .cal-cell1 .cal-month-day .events-list .event {
+    width: 8px;
+    height: 8px;
 }
 .cal-front-fun .cal-month-box .cal-row-fluid .cal-cell1{
-  min-height: 66px;
+  min-height: 40px;
+  height: 42px !important;
+  width: 62px;
 }
 .cal-front-fun .cal-month-box .cal-row-fluid .cal-cell1 .dia-festivo,.cal-front-fun .cal-month-box .cal-row-fluid .cal-cell1 .cal-hoy{
-  height: 64px !important;
+  height: 40px !important;
   width: 98% !important;
 }
 .cal-front-fun .cal-month-box .cal-row-fluid > div : hover{
@@ -532,6 +552,7 @@ footer .area2 .container-fluid .footerGob {
 .input-group .form-control:last-child, .input-group-addon:last-child, .input-group-btn:last-child>.btn, .input-group-btn:last-child>.btn-group>.btn, .input-group-btn:last-child>.dropdown-toggle, .input-group-btn:first-child>.btn:not(:first-child), .input-group-btn:first-child>.btn-group:not(:first-child)>.btn {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
+  vertical-align: middle;
   vertical-align: -webkit-baseline-middle;
   margin-left: -7px;
 }
@@ -620,6 +641,9 @@ footer .area2 .container-fluid .footerGob {
   padding-right: 10px;
   width: 81px;
 }
+.eventradocup{
+  background-color: red !important;
+}
 .evdisp{
   -webkit-box-shadow: inset 0px 0px 5px 0px rgba(0, 0, 0, 0.4);
   box-shadow: inset 0px 0px 5px 0px rgba(0, 0, 0, 0.4);
@@ -633,7 +657,7 @@ footer .area2 .container-fluid .footerGob {
   box-shadow: inset 0px 0px 5px 0px rgba(0, 0, 0, 0.4);
   border-radius: 8px;
   border: 1px solid #ffffff;
-  background-color: yellow;
+  background-color: red;
   cursor:pointer;
 }
 .evbloq{
@@ -641,7 +665,7 @@ footer .area2 .container-fluid .footerGob {
   box-shadow: inset 0px 0px 5px 0px rgba(0, 0, 0, 0.4);
   border-radius: 8px;
   border: 1px solid #ffffff;
-  background-color: #006400;
+  background-color: red;
 }
 .labresreserv{
   margin-top: 7px;
@@ -787,9 +811,16 @@ footer .area2 .container-fluid .footerGob {
 [class*="cal-cell"]:hover , [class*="cal-cell"]:hover > div {
   background-color: #fcf8e3 !important;
 }
+#cal-week-box{
+  display:none !important;
+}
+.cal-events-num{
+  display: none;
+}
 @media (max-width: 1199px) {
   .cal-cell1{
     width: 66px !important;
+    /*width: 42px !important;*/
   }
   .cal-context{
     width: 464px !important;
@@ -802,29 +833,111 @@ footer .area2 .container-fluid .footerGob {
   .containter-tabs-citas{
     width: 505px;
   }
+  .modcalejec{
+    width: 760px;
+  }
 }
 @media (max-width: 767px) {
   .detallecal{
     width: 93%;
   }
+  .modcalejec{
+    width: 534px;
+  }
+  .calendar-ciud{
+    /*height: 550px !important;*/
+  }
+}
+@media (max-width: 767px) and (orientation: landscape) {
+  .calendar-ciud{
+    height: 550px !important;
+  }
+  .modcalejec{
+    height: 300px !important;
+    overflow-y: auto;
+  }
+  .modal-body{
+    overflow-y: hidden;
+  }
+}
+@media (max-width: 563px) {
+  .modcalejec{
+    width: 532px;
+  }
 }
 @media (max-width: 550px) {
+  .cal-cell1{
+    width: 42px !important;
+  }
   .containter-tabs-citas{
     width: 409px;
   }
+  /*.cal-context{
+    width: 465px !important;
+  }*/
   .cal-context{
-    width: 295px !important;
+    width: 296px !important;
   }
-  .cal-row-fluid{
-    height: 60px;
+  .calendar-ciud .calendar .cal-month-box .cal-row-fluid{
+    height: 42px;
   }
-  .cal-cell1{
-    min-height: 60px !important;
+  .calendar-ciud .calendar .cal-month-box .cal-row-fluid .cal-cell1{
+    min-height: 40px !important;
     width: 40px !important;
-    height: 60px;
+    height: 42px;
   }
-  .cal-month-day{
-    height: 60px !important; 
+  .containter-calendar {
+    width: 291px !important;
+  }
+  .calendar-ciud{
+    width: 277 !important;
+  }
+  .calendar-ciud .calendar .cal-month-box .cal-row-fluid .cal-cell1 .cal-month-day{
+    height: 42px !important; 
+  }
+  .calendar-ciud .cal-context {
+    width: 282px !important;
+  }
+  .containter-calendar{
+    /*overflow-x: auto;*/
+  }
+  #cal-week-box{
+    display:none !important;
+  }
+  .mod-cal_ciu{
+    padding-left: 8px !important;
+    padding-top: 0px !important;
+    overflow-y: auto;
+  }
+  .calendar-ciud .page-header{
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+  }
+  /*.con-tab-cal{
+    overflow-x: auto;
+  }*/
+  .btncanappofun{
+    width: 30px;
+    font-size: 10px;
+    padding-left: 3px;
+  }
+  .motcancelcitafun{
+    width: 302px !important;
+  }
+  .calendar-ciud .cal-context .cal-row-head .cal-cell1{
+    width: 40px !important;
+    padding: 0px;
+  }
+}
+@media (max-width: 504px) {
+  .modcalejec{
+    width: 395px;
+  }
+  .calendar-ciud .calendar .cal-month-box .cal-row-fluid .cal-cell1 .cal-month-day,.calendar-ciud .calendar .cal-month-box .cal-row-fluid .cal-cell1{
+    min-height: 10px !important;
+    height: 42px !important; 
   }
 }
 @media (max-width: 450px) {
@@ -840,5 +953,23 @@ footer .area2 .container-fluid .footerGob {
   .detallecal{
     width: 90%;
   }
-
+  .modcalejec{
+    width: 350px;
+  }
+  .btn .icon-edit,.btn .icon-remove{
+    display:none;
+  }
+  .containter-calendar{
+    width: 384px;
+  }
+}
+@media (max-width: 349px) {
+  .modcalejec{
+    width: 325px;
+  }
+}
+@media (max-width: 325px) {
+  .modcalejec{
+    width: 300px;
+  }
 }
