--- a/assets/calendar/css/calendar.css
+++ b/assets/calendar/css/calendar.css
@@ -462,7 +462,7 @@ span[data-cal-date]:hover {
   color: #800080;
 }
 .cal-day-weekend span[data-cal-date] {
-  color: darkred;
+  /*color: darkred;*/
 }
 #cal-week-box {
   border: 1px solid #e1e1e1;
